[gd_scene load_steps=12 format=2]

[ext_resource path="res://Shared/tileset.svg" type="Texture" id=1]
[ext_resource path="res://GUI/GUIEntities/GUIComponent.gd" type="Script" id=2]
[ext_resource path="res://Entities/Entities/Machines/Furnace/FurnaceGUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Entities/Machines/Furnace/FurnaceEntity.gd" type="Script" id=4]
[ext_resource path="res://Systems/Work/WorkComponent.gd" type="Script" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.788945, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 12, 2.5, 1 )
flag_disable_z = true
direction = Vector3( -1, -0.175, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 67.13
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "SETUP"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Vents:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1.62353, 0.784314, 0.270588, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shutdown"
tracks/0/type = "value"
tracks/0/path = NodePath("Vents:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Vents:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="FurnaceEntity" type="StaticBody2D" groups=[
"gui_entities",
"workers",
]]
script = ExtResource( 4 )

[node name="GUIComponent" type="Node" parent="."]
script = ExtResource( 2 )
GuiWindow = ExtResource( 3 )

[node name="WorkComponent" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Furnace" type="Sprite" parent="."]
position = Vector2( 0, -24.6946 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 119, 229, 102, 102 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -24.6946 )
polygon = PoolVector2Array( -50.25, 24.75, -50.25, 9.75, -0.25, -11.75, 50.25, 9.75, 50, 25.25, 0, 49.75 )

[node name="Vents" type="Node2D" parent="."]
modulate = Color( 1.62353, 0.784314, 0.270588, 0 )

[node name="Vents" type="Sprite" parent="Vents"]
position = Vector2( -28, -11.4724 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 242, 282, 20, 22 )

[node name="LoadingVent" type="Sprite" parent="Vents"]
position = Vector2( 25.0363, 3.65632 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 292, 299, 26, 19 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 2, 1.07, 0.08, 1 )
position = Vector2( -28.8214, -11.8331 )
emitting = false
lifetime = 0.5
visibility_rect = Rect2( -36.2296, -9.99514, 45.9992, 40.6713 )
process_material = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = SubResource( 4 )
anims/Shutdown = SubResource( 5 )
anims/Work = SubResource( 6 )
[connection signal="gui_opened" from="GUIComponent" to="." method="_on_GUIComponent_gui_opened"]
[connection signal="gui_status_changed" from="GUIComponent" to="." method="_on_GUIComponent_gui_status_changed"]
[connection signal="work_accomplished" from="WorkComponent" to="." method="_on_WorkComponent_work_accomplished"]
[connection signal="work_done" from="WorkComponent" to="." method="_on_WorkComponent_work_done"]
[connection signal="work_enabled_changed" from="WorkComponent" to="." method="_on_WorkComponent_work_enabled_changed"]
